--- a/templates/index.html
+++ b/templates/index.html
@@ -319,7 +319,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-3.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-3.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>
@@ -331,7 +331,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-4.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-4.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>
@@ -343,7 +343,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-5.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-5.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>
@@ -355,7 +355,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-6.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-6.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>
@@ -375,7 +375,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-7.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-7.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>
@@ -387,7 +387,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-8.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-8.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>
@@ -399,7 +399,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-9.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-9.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>
@@ -411,7 +411,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-10.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-10.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>
@@ -423,7 +423,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-11.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-11.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>
@@ -435,7 +435,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-12.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-12.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>
@@ -455,7 +455,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-13.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-13.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>
@@ -467,7 +467,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-14.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-14.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>   
@@ -479,7 +479,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-15.jpg" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-15.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>   
