--- a/templates/index.html
+++ b/templates/index.html
@@ -479,7 +479,7 @@
                     <div class="col-lg-4 mt-3">
                         <div class="rounded bg-white p-2">
                             <div class="img_blog">
-                                <img src="../static/images/blog-15.png" alt="" class="img-fluid rounded mx-auto d-block">
+                                <img src="../static/images/blog-15.jpg" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
                             <div class="content_blog p-3">
                                 <div>   
