--- a/templates/index.html
+++ b/templates/index.html
@@ -114,7 +114,7 @@
                 <div class="col-lg-12">
                     <div class="text-center header-content mx-auto">
                         <h4 class="text-white first-title mb-4">Seu Plano</h4>
-                        <h1 class="header-name text-white text-capitalize mb-0">Descubra <span class="element fw-bold"></span></h1>
+                        <h1 class="header-name text-white text-capitalize mb-0">Descubra </br>-<span class="element fw-bold"></span></h1>
                         <p class="text-white mx-auto header-desc mt-4">Na VIVO EMPRESAS, acreditamos na liberdade de se conectar quando e onde você quiser. Junte-se a nós para transformar conexões em liberdade.</p>
                         <div class="mt-4 pt-2">
                             <a href="#contact" class="btn btn-outline-custom btn-round">Fale conosco</a>
@@ -297,7 +297,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-1.jpg" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Planos de TV</a></h5>
                                 </div>
@@ -309,7 +309,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-2.jpg" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Internet BOX</a></h5>
                                 </div>
@@ -321,7 +321,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-3.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Internet Dedicada</a></h5>
                                 </div>
@@ -333,7 +333,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-4.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Internet Fibra</a></h5>
                                 </div>
@@ -345,7 +345,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-5.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Vox Digital</a></h5>
                                 </div>
@@ -357,7 +357,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-6.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Ilimitado Empresas</a></h5>
                                 </div>
@@ -377,7 +377,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-7.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Número 0300</a></h5>
                                 </div>
@@ -389,7 +389,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-8.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Número 0800</a></h5>
                                 </div>
@@ -401,7 +401,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-9.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">VOX NG</a></h5>
                                 </div>
@@ -413,7 +413,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-10.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">VOX IP</a></h5>
                                 </div>
@@ -425,7 +425,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-11.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">VOX Digital</a></h5>
                                 </div>
@@ -437,7 +437,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-12.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Serviço 2P</a></h5>
                                 </div>
@@ -457,7 +457,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-13.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Equipamento</a></h5>
                                 </div>
@@ -469,7 +469,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-14.png" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>   
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Microsoft 365 Bussiness Basic</a></h5>
                                 </div>
@@ -481,7 +481,7 @@
                             <div class="img_blog">
                                 <img src="../static/images/blog-15.jpg" alt="" class="img-fluid rounded mx-auto d-block">
                             </div>
-                            <div class="content_blog p-3">
+                            <div class="content_blog p-3 text-center">
                                 <div>   
                                     <h5 class="fw-bold mb-0"><a href="javascript:void(0)" class="text-dark">Vivo Fibra</a></h5>
                                 </div>
@@ -533,7 +533,7 @@
                         <i class="mbri-pin text-custom h1"></i>
                     </div>
                     <div class="mt-3">
-                        <h5 class="mb-0 contact_detail-title fw-bold">Localodade/h5>
+                        <h5 class="mb-0 contact_detail-title fw-bold">Localodade</h5>
                         <p class="text-muted">25, Maceió Alagoas, Serraria.</p>
                     </div>
                 </div>
