--- a/templates/index.html
+++ b/templates/index.html
@@ -70,11 +70,11 @@
         </div>
     </div>
 
-	<!-- Start Navbar -->
+		<!-- Start Navbar -->
 	<nav class="navbar navbar-expand-lg custom-nav navbar-light fixed-top sticky">
 	    <div class="container">
             <a class="navbar-brand pt-0 logo" href="#">
-                <span style="color: #d99ae0;" class="logo-text">Avantti</span>
+                <img src="../static/images/logo0.png" alt="Logo" style="height: 40px; margin-right: 10px;">
             </a>
            
 	        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -98,7 +98,9 @@
 	                <li class="nav-item">
 	                    <a class="nav-link" href="#contact">Contato</a>
 	                </li>
+                    
 	            </ul>
+                <img src="../static/images/vivo-logo-nova.png" alt="Logo" style="height: 40px; margin-right: 10px;">
 	        </div>
 	    </div>
 	</nav>
