--- a/templates/index.html
+++ b/templates/index.html
@@ -260,7 +260,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
     </a>
     <!-- START CTA -->
-    <section class="section">
+    <section class="section" id="client">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
