--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="mt-3">
-                        <h2><span class="fw-bold">Sobre</span> a Vivo</h2>
+                        <h2><span class="fw-bold" style="color: #e83fee;">Sobre</span> a Vivo</h2>
                         <h4 class="mt-4">Olá! <span class="text-custom fw-bold">Sejá bem vindo!</span></h4>
                         <p class="text-muted mt-4"><b>Conectividade Ininterrupta:</b> Os planos da Vivo garantem que sua empresa esteja sempre online, aumentando a produtividade.</p>
                         <p class="text-muted mt-2"><b>Economia Significativa:</b> Optar pelos planos empresariais da Vivo pode resultar em economias significativas para o seu negócio. Com opções de planos flexíveis e personalizáveis, você só paga pelo que realmente precisa. Além disso, a Vivo oferece várias ofertas e descontos exclusivos para empresas, proporcionando ainda mais economia.</p>
@@ -168,7 +168,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <h2>Outros <span class="fw-bold">Serviços</span></h2>
+                        <h2>Outros <span class="fw-bold" style="color: #e83fee;">Serviços</span></h2>
                         <p class="text-muted mx-auto section-subtitle mt-3" style="font-family: sans-serif;"></p>
                     </div>
                 </div>
@@ -264,7 +264,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <h2 class="fw-bold">Clientes</h2>
+                        <h2 class="fw-bold" style="color: #e83fee;">Clientes</h2>
                         <p class="text-muted mx-auto section-subtitle mt-3">Você sabia que temos uma promoção exclusiva para você?<br>
                             Este é o produto que você estava procurando.<br>
                             Estou feliz em ajudar. O que posso fazer por você hoje?<br></p>
@@ -287,7 +287,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="text-center">
-                            <h2>Internet e <span class="fw-bold">TV</span></h2>
+                            <h2>Internet e <span class="fw-bold" style="color: #e83fee;">TV</span></h2>
                             <p class="text-muted mx-auto section-subtitle mt-3">Aproveite nosso combo exclusivo com internet e TV Corporativa, que inclui canais de alta qualidade para entretenimento e informação.</p>
                         </div>
                     </div>
@@ -368,7 +368,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-12">
                             <div class="text-center">
-                                <h2>Voz <span class="fw-bold">Fixa</span></h2>
+                                <h2>Voz <span class="fw-bold" style="color: #e83fee;">Fixa</span></h2>
                                 <p class="text-muted mx-auto section-subtitle mt-3">Desfrute de ligações ilimitadas e uma internet de ultra velocidade, perfeita para videoconferências e trabalho remoto.</p>
                             </div>
                         </div>
@@ -448,7 +448,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-12">
                             <div class="text-center">
-                                <h2>Home <span class="fw-bold">Office</span></h2>
+                                <h2>Home <span class="fw-bold" style="color: #e83fee;">Office</span></h2>
                                 <p class="text-muted mx-auto section-subtitle mt-3">A Vivo está comprometida em oferecer as melhores soluções para garantir sua produtividade, mesmo no conforto do seu lar.</p>
                             </div>
                         </div>
@@ -500,7 +500,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-12">
                     <div class="text-center">
-                        <h2><span class="fw-bold">Contato</span></h2>
+                        <h2><span class="fw-bold" style="color: #e83fee;">Contato</span></h2>
                         <p class="text-muted mx-auto section-subtitle mt-3">Deixe seus dados para contato e garantimos que entraremos em contato logo-logo!</p>.</p>
                     </div>
                 </div>
@@ -512,7 +512,7 @@
                         <i class="mbri-mobile2 text-custom h1"></i>
                     </div>
                     <div class="mt-3">
-                        <h5 class="mb-0 contact_detail-title fw-bold">Nosso contato</h5>
+                        <h5 class="mb-0 contact_detail-title fw-bold" style="color: #e83fee;">Nossos contatos</h5>
                         <p class="text-muted">+55 82 3024-8079</p>
                     </div>
                 </div>
