--- a/templates/index.html
+++ b/templates/index.html
@@ -512,7 +512,7 @@
                         <i class="mbri-mobile2 text-custom h1"></i>
                     </div>
                     <div class="mt-3">
-                        <h5 class="mb-0 contact_detail-title fw-bold" style="color: #e83fee;">Nossos contatos</h5>
+                        <h5 class="mb-0 contact_detail-title fw-bold" >Nosso contato</h5>
                         <p class="text-muted">+55 82 3024-8079</p>
                     </div>
                 </div>
